scss/main.scss
 
/* 
SASS Base
Author: Tomas Roy
Written for MiniCreative sites
*/

// SASS Variables ==========================================================

// Color Defaults
$text: #222 !default;

// Sizing Defaults
$padding: 30px !default;
$padding_: 20px !default;

// Breakpoint Sizing Default
$l_max: 1140px !default;
$m_max: 1020px !default;
$s_max: 760px !default;
$xs_max: 480px !default;

// Container Sizing Defaults
$max_container: 1080px !default;
$basic_container: 960px !default;
$tablet_container: 720px !default;
$mobile_container: 440px !default;

// SASS Plugins
@mixin box-shadow($shadow) {-moz-box-shadow: $shadow; -webkit-box-shadow: $shadow; box-shadow: $shadow;}
@mixin border-radius($radius) {-webkit-border-radius: $radius; border-radius: $radius; background-clip: padding-box;}

// Resets & Basic Classes ===================================================

html, body {margin:0px; padding:0px; width:100%; min-height:100%;}
h1, h2, h3 {margin:0px; color:inherit; font-family:inherit;}
div {box-sizing:border-box;}
input, textarea {width:100%; box-sizing:border-box; font-size:16px;}
.end {margin-right:0px;}
img {border:0; max-width:100%;}
a {color:inherit; text-decoration:none;}
.clear {clear:both;}

// Default Responsive Breakpoints & Container Sizes =========================

@mixin breakpoint($point) {
	@if $point == l {
		@media screen and (max-width: $l_max) {@content;}
	}
	@else if $point == m {
		@media screen and (max-width: $m_max)  {@content;}
	}
	@else if $point == m-only {
		@media screen and (max-width: $m_max) and (min-width:$s_max) {@content;}
	}
	@else if $point == s {
		@media screen and (max-width: $s_max)  {@content;}
	}
	@else if $point == xs {
		@media screen and (max-width: $xs_max)  {@content;}
	}
	@else if $point == notTouch {
		@media screen and (min-width: $m_max)  {@content;}
	}
}

.container {
	width: $max_container; margin:0px auto;
	@include breakpoint(l) {width:$basic_container;}
	@include breakpoint(m) {width:$tablet_container;}
	@include breakpoint(s) {width:$mobile_container;}
	@include breakpoint(xs) {width:100%; padding:0px 20px;}
}

// Fonts =====================================================================

body {
	font-family:Arial; 
	font-size:16px;
	color:$text;
	line-height:1.4;
	@include breakpoint(s) {font-size:14px;}
}
h1 {
	font-size:24px;
	@include breakpoint(s) {font-size:20px;}
}
h2 {
	font-size:20px;
	@include breakpoint(s) {font-size:18px;}
}
h3 {
	font-size:18px;
	@include breakpoint(s) {font-size:16px;}
}

// Spacing ===================================================================
@mixin row {
	margin-top:$padding;
	@include breakpoint(m) {margin-top:$padding_;}
}
@mixin push {
	margin-right:$padding;
	@include breakpoint(m) {margin-right:$padding_;}
}
@mixin row_pad {
	padding-top:$padding; 
	@include breakpoint(m) {padding-top:$padding_;}
}
@mixin vertical_pad {
	padding-top:$padding; padding-bottom:$padding;
	@include breakpoint(m) {padding-top:$padding_; padding-bottom:$padding_;}
}

// Reusable Element Styles ===================================================

// Columns: further styled by jQuery in main.js
.columns {
	display:block;
	@include breakpoint(s) {margin-bottom:-$padding_;}
	.column {
		display:inline-block; vertical-align:top; box-sizing:border-box;
		margin-right:$padding;
		@include breakpoint(m) {margin-right:$padding_;}
		@include breakpoint(s) {margin-bottom:$padding_;}
		&.full {width:100%; margin-right:0px;}
	}
	&.stacked, &.bricks {
		.column {
			margin-bottom:$padding; 
			@include breakpoint(m) {margin-bottom:$padding_;}
		}
	}
	&.stacked {
		margin-bottom:-$padding; 
		@include breakpoint(m) {margin-bottom:-$padding_;}
	}
	&.bricks {
		@include breakpoint(s) {margin-bottom:0px !important;}
	}
}

// Divider
.divider {
	display:block; margin:$padding 0px; border-bottom:2px solid $accent;
	@include breakpoint(m) {margin:$padding_ 0px;}

	&.bottom {
		margin:$padding 0px 0px;
		@include breakpoint(m) {margin:$padding_ 0px 0px;}
	}
	&.centered {
		max-width:640px; margin-left:auto !important; margin-right:auto !important;
	}
	&.under-header {
		margin:10px 0px $padding; 
		@include breakpoint(m) {margin:10px 0px $padding_;}
	}
	&.under-image {
		margin:30px 0px $padding;
		@include breakpoint(m) {margin:20px 0px $padding_;}
	}
	&.space {
		border-bottom:0px; margin:$padding 0px 0px;
		@include breakpoint(m) {margin:$padding_ 0px 0px;}
	}
}

// ProcessWire Form
.pw-form {
	input, textarea {padding:8px 10px; font-family:inherit;}
	.form-message {
		position:fixed; top:0px; left:0px; width:100%; padding:8px 20px; text-align:center;
		background:#333; color:white;
	}
	.form-error {
		font-size:14px; color:red; line-height:1.2;
	}
	.honey {display:none;}
}

// Google Map
.google-map {width:100%; height:300px;}

// Layout Styles ======================================================
header .container {position:relative;}

.navigation {

	// Reset lists
	ul {display:block; margin:0px; padding:0px;}

	// For desktop computers
	@include breakpoint(notTouch) {

		// Top-Level Links
		> ul > li  {
			display:inline-block; position:relative;

			// Show dropdown menus on hover
			&:hover .sub-menu {display:block;}
		}

		// Dropdown Menus
		ul.sub-menu {
			display:none; // Hide dropdown menus until hover
			position:absolute; top:100%; left:0px; width:100%; text-align:left;

			// Dropdown Links
			> li {display:block;}
		}
	}

	// For mobile devices
	@include breakpoint(m) {
		display:none;
		position:fixed; height:100vh; width:320px; left:0px; top:0px; z-index:500;
		overflow:scroll;
		background:white; @include box-shadow(0px 0px 5px rgba(0,0,0,0.4));
		padding:20px 0px;

		li {
			padding:0px 20px; line-height:2.4; font-size:18px; border-top:1px solid #e5e5e5;
			a {display:block;}
		}
		ul.sub-menu {
			margin:0px -20px;
			li {display:block; padding-left:40px;}
		}

		&.show {display:block; -webkit-animation:slideInLeft 300ms; animation:slideInLeft 300ms;}
	}
	@include breakpoint(s) {
		width:280px;
	}
}

// Mobile Navigation Components
#nav-underlay {
	display:none;
	position:fixed; width:100vw; height:100vh; top:0px; left:0px; z-index:400;
	background:rgba(0,0,0,0.5);
	&.show {display:block; -webkit-animation:fadeIn 300ms; animation:fadeIn 300ms;}
}
#nav-toggle {
	display:none;
	position:absolute; right:0px; top:50%; margin-top:-16px; 
	width:32px; height:32px; font-size:32px; line-height:1;
	@include breakpoint(m) {display:block;}
	@include breakpoint(xs) {right:20px;}
}

// WordPress Specific Styles ============================================

// Mobile navigation fix
body.customize-support {
	header .navigation {
		@include breakpoint(m) {
			padding-top:66px;
		}
	}
}

// Content styles
.content {

	// Legacy image alignment
	img.alignleft {
		float:left; margin-right:$padding; margin-bottom:20px;
	}
	img.alignright {
		float:right; margin-left:$padding; margin-bottom:20px;
	}
	img.alignleft, img.alignright {
		@include breakpoint(s) {float:none; width:100%; margin:0px 0px 20px;}
	}

	// Gutenberg Styles (March 2019)
	&.gutenberg {
		
		// Spacing parameters
		.container {
			width:100%; padding:0px $padding;
			@include breakpoint(m) {padding:0px $padding_;}

			> * {
				max-width:700px; margin:$padding auto;
				&:first-child {margin-top:0px;}
				&:last-child {margin-bottom:0px;}

				@include breakpoint(m) {
					max-width:600px; margin:$padding_ auto;
				}
				@include breakpoint(s) {
					max-width:360px;
				}

				// Types of spacing
				&.alignwide {
					max-width:1080px;
					@include breakpoint(l) {max-width:960px;}
					@include breakpoint(m) {max-width:720px;}
					@include breakpoint(s) {max-width:360px;}
				}
				&.alignfull {
					max-width:10000px; margin-left:-$padding; margin-right:-$padding;
					@include breakpoint(m) {margin-left:-$padding_; margin-right:-$padding_;}
				}
			}
		}

		// Images
		figure {
			margin-block-start:0px; margin-block-end:0px;
			figcaption {margin-top:10px; margin-bottom:5px;}

			// Types of images
			&.aligncenter {
				margin-top:$padding; margin-bottom:$padding;
			}
			&.alignleft {
				margin-right:20px;
				@include breakpoint(s) {margin-right:0px;}
			}
			&.alignright {
				margin-left:20px;
				@include breakpoint(s) {margin-left:0px;}
			}
			&.alignleft, &.alignright {
				@include breakpoint(s) {
					display:block; width:100%; margin-bottom:$padding_;
					img {width:100%;}
					figcaption {display:block;}
				}
			}
		}

		// Columns
		.wp-block-columns {

			// Override broken WordPress 5.1 styling
			flex-wrap:nowrap !important;
			@include breakpoint(s) {
				flex-wrap:wrap !important; margin-bottom:-$padding_;
			}

			// Four column handling
			&.has-4-columns {
				@include breakpoint(m-only) {
					flex-wrap:wrap !important;
					.wp-block-column {
						width:50%; margin:$padding_ 0px; padding:0px #{$padding / 2};
						&:nth-child(odd) {padding-left:0px;}
						&:nth-child(even) {padding-right:0px;}
					}
				}
			}

			// Columns styling
			.wp-block-column {

				// Fix margins
				margin:0px #{$padding / 2};
				&:first-child {margin-left:0px;}
				&:last-child {margin-right:0px;}

				// Fix paragraph spacing
				p:first-of-type {margin-top:0px;}
				p:last-of-type {margin-bottom:0px;}

				// Mobile column styling
				@include breakpoint(s) {
					flex-basis:100%; margin:0px; margin-bottom:$padding_;
				}
			}

			// Full width images in columns
			figure {
				width:100%;
				img {width:100%;}
			}
		}

		// Quotes
		.wp-block-quote {
			position:relative; box-sizing:border-box; padding:0px 50px; text-align:center; 
			@include breakpoint (m) {padding:0px 30px;}
			font-size:18px; font-style:italic; 
			&:before {
				content:'\201C'; position:absolute; top:-6px; left:0px; line-height:1;
				font-family:'Georgia', serif; font-size:96px; font-style:normal;
				color:#eee;
			}
			cite {font-size:16px; font-style:normal; font-weight:bold;}
		}

		// Seperators
		.wp-block-separator {
			border:0px; border-bottom:1px solid #ddd;
		}
	}
}

// ProcessWire Specific Styles ===========================================
#processwire {
	position:fixed; right:0px; bottom:20px; z-index:500;
	font-family:Arial; text-align:right; font-size:16px; line-height:26px;
	a {
		color:white; text-decoration:none; padding:4px 6px; background:#333; border-right:3px solid #111;
		&:hover {background:black;}
	}
}

// Transitions ==========================================================
@-webkit-keyframes fadeIn {
	from {opacity:0;} to {opacity:1;}
}  
@keyframes fadeIn {
	from {opacity:0;} to {opacity:1;}
}
@-webkit-keyframes fadeOut {
	from {opacity:1;} to {opacity:0;}
}  
@keyframes fadeOut {
	from {opacity:1;} to {opacity:0;}
}
@-webkit-keyframes slideInLeft {
	from {
		-webkit-transform: translate3d(-100%, 0, 0);
		transform: translate3d(-100%, 0, 0);
		visibility: visible;
	}
	to {
		-webkit-transform: translate3d(0, 0, 0);
		transform: translate3d(0, 0, 0);
	}
}
@keyframes slideInLeft {
	from {
		-webkit-transform: translate3d(-100%, 0, 0);
		transform: translate3d(-100%, 0, 0);
		visibility: visible;
	}
	to {
		-webkit-transform: translate3d(0, 0, 0);
		transform: translate3d(0, 0, 0);
	}
}
@-webkit-keyframes slideOutRight {
	from {
	-webkit-transform: translate3d(0, 0, 0);
	transform: translate3d(0, 0, 0);
	}

	to {
	visibility: hidden;
	-webkit-transform: translate3d(100%, 0, 0);
	transform: translate3d(100%, 0, 0);
	}
}
@keyframes slideOutRight {
	from {
		-webkit-transform: translate3d(0, 0, 0);
		transform: translate3d(0, 0, 0);
	}

	to {
		visibility: hidden;
		-webkit-transform: translate3d(100%, 0, 0);
		transform: translate3d(100%, 0, 0);
	}
}  

